<resources>
    <string name="app_name">Hatırlatık</string>
    <string name="task_list">Görev Listesi</string>
    <string name="task_details">Görev Detayları</string>
    <string name="filter_tasks">Görevleri Filtrele</string>
    <string name="delete_completed_tasks">Tamamlananları Sil</string>
    <string name="settings">Ayarlar</string>
    <string name="more_options">Diğer Seçenekler</string>
    <string name="calendar_view">Takvim Görünümü</string>
    <string name="test_notifications">Bildirimleri Test Et</string>
    <string name="add_task">Görev Ekle</string>
    <string name="edit_task">Görevi Düzenle</string>
    <string name="delete_task">Görevi Sil</string>
    <string name="update">Güncelle</string>
    <string name="task_updated_active">Görev güncellendi ve aktif duruma getirildi</string>
    <string name="task_added">Görev başarıyla eklendi</string>
    <string name="calendar">Takvim</string>
    <string name="agenda_calendar">Ajanda Takvim</string>
    <string name="custom_calendar">Özel Takvim</string>
    <string name="no_tasks_for_selected_date">Seçili tarih için görev yok</string>
    <string name="add_task_for_date">%s için görev ekle</string>
    <string name="tasks_for_date">%s için görevler</string>
    <string name="select_date">Tarih Seç</string>
    <string name="calendar_marked_days_info">%d gün için görev bulunuyor</string>
    <string name="task_completed">Görev aktif değil, tamamlandı</string>
    <string name="task_active">Görev aktif, tamamlanacak</string>
    <string name="task_overdue">Süresi Geçmiş</string>
    <string name="task_summary">Görev Özeti</string>
    <string name="active_tasks">Aktif Görevler</string>
    <string name="completed_tasks">Tamamlanan Görevler</string>
    <string name="total_tasks">Toplam Görevler</string>
    <string name="all_tasks">Tüm Görevler</string>
    <string name="add_first_task">İlk Görevi Ekle</string>
    <string name="notification_title">Görev Hatırlatması</string>
    <string name="notification_channel_name">Görev Bildirimleri</string>
    <string name="notification_channel_description">Görev hatırlatmaları için bildirimler</string>
    <string name="widget_name">Hatırlatık Görevler</string>
    <string name="widget_description">Günlük görevlerinizi görüntüleyin ve yönetin</string>
    <string name="no_tasks_today">Bugün için görev yok</string>
    <string name="widget_loading">Görevler yükleniyor...</string>
    <string name="widget_configure">Widget\'ı Yapılandır</string>
    <string name="error_task_not_found">Görev bulunamadı</string>
    <string name="error_saving_task">Görev kaydedilirken hata oluştu</string>
    <string name="error_deleting_task">Görev silinirken hata oluştu</string>
    <string name="dialog_delete_title">Görevi Sil</string>
    <string name="dialog_delete_message">Bu görevi silmek istediğinizden emin misiniz?</string>
    <string name="dialog_yes">Evet</string>
    <string name="dialog_no">Hayır</string>
    <string name="dialog_task_status_title">Görev Durumu Değişikliği</string>
    <string name="dialog_task_status_message">Bu görevin durumunu değiştirmek istediğinizden emin misiniz?</string>
    <string name="task_marked_completed">Görev tamamlandı olarak işaretlendi</string>
    <string name="task_marked_active">Görev aktif olarak işaretlendi</string>
    <string name="task_title">Görev Başlığı</string>
    <string name="task_description">Görev Açıklaması</string>
    <string name="task_date">Görev Tarihi</string>
    <string name="task_time">Görev Saati</string>
    <string name="task_title_hint">Görev Başlığı</string>
    <string name="task_description_hint">Görev Açıklaması</string>
    <string name="task_date_hint">Tarih Seç</string>
    <string name="task_time_hint">Saat Seç</string>
    <string name="task_reminder_hint">Hatırlatma Süresi</string>
    <string name="reminder_minutes">Hatırlatma Süresi (Dakika)</string>
    <string name="reminder_minutes_hint">Ne kadar önce hatırlatılsın?</string>
    <string name="notification_type">Bildirim Türü</string>
    <string name="notification_type_label">Bildirim Türü</string>
    <string name="notification_only">Sadece Bildirim</string>
    <string name="notification_and_alarm">Bildirim ve Alarm</string>
    <string name="save">Kaydet</string>
    <string name="save_button">Kaydet</string>
    <string name="cancel">İptal</string>
    <string name="delete">Sil</string>
    <string name="edit">Düzenle</string>
    <string name="complete">Tamamla</string>
    <string name="task_deleted">Görev Silindi</string>
    <string name="task_saved">Görev Kaydedildi</string>
    <string name="error_empty_title">Görev başlığı boş olamaz</string>
    <string name="error_empty_date">Görev tarihi seçilmedi</string>
    <string name="error_empty_time">Görev saati seçilmedi</string>
    <string name="error_past_date">Geçmiş bir tarih seçilemez</string>
    <string name="error_past_time">Geçmiş bir saat seçilemez</string>
    <string name="reminder_minutes_format">%d dakika önce hatırlat</string>
    <string name="undo">Geri Al</string>
    <string name="empty_task_list">Henüz görev yok</string>
    <string name="empty_task_list_subtitle">Yeni görev eklemek için + butonuna tıklayın</string>
    <string name="no_tasks">Henüz görev eklenmemiş\nYeni görev eklemek için + butonuna tıklayın</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_app_id">ca-app-pub-xxx~yyy</string>
    <string name="admob_banner_id">ca-app-pub-xxx/yyy</string>
    <string name="appearance">Görünüm</string>
    <string name="dark_mode">Karanlık Mod</string>
    <string name="dark_mode_summary">Karanlık temayı etkinleştir</string>
    <string name="notifications">Bildirimler</string>
    <string name="default_reminder_time">Varsayılan Hatırlatma Süresi</string>
    <string name="default_notification_type">Varsayılan Bildirim Türü</string>
    <string name="notification_sound">Bildirim Sesi</string>
    <string name="notification_sound_summary">Bildirimlerde ses çal</string>
    <string name="notification_vibration">Titreşim</string>
    <string name="notification_vibration_summary">Bildirimlerde titreşim</string>
    <string name="ads">Reklamlar</string>
    <string name="show_ads">Reklamları Göster</string>
    <string name="show_ads_summary">Uygulamayı desteklemek için reklamları göster</string>
    <string name="about">Hakkında</string>
    <string name="version">Versiyon</string>
    <string name="app_version">1.0.0</string>
    <string name="privacy_policy">Gizlilik Politikası</string>
    <string name="privacy_policy_summary">Gizlilik politikamızı görüntüle</string>
    <string-array name="reminder_times">
        <item>5 dakika önce</item>
        <item>10 dakika önce</item>
        <item>15 dakika önce</item>
        <item>30 dakika önce</item>
        <item>1 saat önce</item>
        <item>2 saat önce</item>
    </string-array>
    <string-array name="reminder_times_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <string-array name="notification_types">
        <item>Bildirim</item>
        <item>Alarm</item>
    </string-array>
    <string-array name="notification_type_values">
        <item>notification</item>
        <item>alarm</item>
    </string-array>
    <string name="filter">Filtrele</string>
    <string name="filter_all">Tüm Görevler</string>
    <string name="filter_active">Aktif Görevler</string>
    <string name="filter_completed">Tamamlanan Görevler</string>
    <string name="permission_notification_title">Bildirim İzni Gerekli</string>
    <string name="permission_notification_message">Hatırlatık uygulaması, görevlerinizi zamanında hatırlatabilmek için bildirim iznine ihtiyaç duyar. Bildirimlere izin vermezseniz, uygulama sizi görevleriniz hakkında bilgilendiremeyecektir.</string>
    <string name="permission_notification_denied_title">Bildirim İzni Reddedildi</string>
    <string name="permission_notification_denied_message">Bildirimlere izin vermediğiniz için Hatırlatık uygulaması görevlerinizi size hatırlatamayacak. İzin vermek için uygulama ayarlarını açabilirsiniz.</string>
    <string name="permission_alarm_title">Alarm İzni Gerekli</string>
    <string name="permission_alarm_message">Hatırlatık uygulaması, görevlerinizi tam zamanında hatırlatabilmek için alarm iznine ihtiyaç duyar. Bu izni vermezseniz, bazı hatırlatmalar gecikmeli olarak gelebilir.</string>
    <string name="button_grant_permission">İzin Ver</string>
    <string name="button_open_settings">Ayarları Aç</string>
    <string name="button_cancel">İptal</string>
    <string name="permission_internet_title">İnternet İzni Gerekli</string>
    <string name="permission_internet_message">Hatırlatık uygulaması, size daha iyi bir deneyim sunabilmek ve reklamları gösterebilmek için internet erişimine ihtiyaç duyar. İnternet izni vermezseniz, bazı özellikler düzgün çalışmayabilir ve reklamları göremeyebilirsiniz.</string>
    <string name="permission_internet_denied_title">İnternet İzni Reddedildi</string>
    <string name="permission_internet_denied_message">İnternet erişimine izin vermediğiniz için bazı özellikler düzgün çalışmayabilir ve reklamları göremeyebilirsiniz. İzin vermek için uygulama ayarlarını açabilirsiniz.</string>
    <string name="no_internet_title">İnternet Bağlantısı Gerekli</string>
    <string name="no_internet_message">Hatırlatık uygulamasını kullanabilmek için internet bağlantısı gereklidir. Lütfen internet bağlantınızı kontrol edin ve tekrar deneyin.</string>
    <string name="no_internet_retry">Tekrar Dene</string>
    <string name="no_internet_settings">İnternet Ayarları</string>
    <string name="no_internet_exit">Çıkış</string>
    <string name="checking_internet">İnternet bağlantısı kontrol ediliyor...</string>
    <string name="internet_connected">İnternet bağlantısı sağlandı</string>
    <string name="internet_not_connected">İnternet bağlantısı yok</string>
    <string name="task_completion_status">Görev tamamlanma durumu</string>
    <string name="routine_settings">Rutin Ayarları</string>
    <string name="is_routine">Rutin Görev</string>
    <string name="routine_type">Rutin Türü</string>
    <string name="routine_daily">Günlük</string>
    <string name="routine_weekly">Haftalık</string>
    <string name="routine_monthly">Aylık</string>
    <string name="routine_yearly">Yıllık</string>
    <string name="routine_custom">Özel</string>
    <string name="routine_weekdays">Hafta İçi (Pazartesi-Cuma)</string>
    <string name="routine_weekends">Hafta Sonu (Cumartesi-Pazar)</string>
    <string name="routine_no_repeat">Tekrarlama Yok</string>
    <string name="routine_end_date">Bitiş Tarihi</string>
    <string name="routine_days_of_week">Haftanın Günleri</string>
    <string name="routine_day_monday">Pazartesi</string>
    <string name="routine_day_tuesday">Salı</string>
    <string name="routine_day_wednesday">Çarşamba</string>
    <string name="routine_day_thursday">Perşembe</string>
    <string name="routine_day_friday">Cuma</string>
    <string name="routine_day_saturday">Cumartesi</string>
    <string name="routine_day_sunday">Pazar</string>
    <string name="routine_month_days_hint">Ayın Günleri (1-31)</string>
    <string name="routine_month_days_helper">Örnek: 1,15,30 (virgülle ayırın)</string>
    <string name="routine_times_per_day_label">Günde kaç kez:</string>
    <string name="routine_interval_hours_label">Tekrarlamalar arası süre:</string>
    <string name="routine_time_range_label">Zaman Aralığı</string>
    <string name="routine_start_time">Başlangıç Saati</string>
    <string name="routine_end_time">Bitiş Saati</string>
    <string name="routine_date_range_label">Tarih Aralığı</string>
    <string name="routine_start_date">Başlangıç Tarihi</string>
</resources>