<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_custom_calendar"
        android:orderInCategory="1"
        android:title="@string/custom_calendar"
        android:icon="@drawable/ic_calendar"
        app:showAsAction="always"
        android:visible="true"
        android:enabled="true" />
    
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="2"
        android:title="@string/filter_tasks"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"
        android:visible="true"
        android:enabled="true" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"
        android:visible="true"
        android:enabled="true" />
        
</menu> 